--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <div class="nav-container">
         <h1 class="space">SpaceWalkers</h1>
         <nav>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">About Us</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href="contactform.html">Contact</a>
           <a href="#">Sign In</a>
         </nav>
       </div>
