--- a/contactform.html
+++ b/contactform.html
@@ -38,7 +38,7 @@
           type="text"
           id="fname"
           name="firstname"
-          placeholder="Your name.."
+          placeholder="First Name Please"
         />
 
         <label for="lname">Last Name</label>
@@ -46,7 +46,7 @@
           type="text"
           id="lname"
           name="lastname"
-          placeholder="Your last name.."
+          placeholder="Last Name Please"
         />
 
         <label for="country">Country</label>
@@ -54,17 +54,20 @@
           <option value="australia">Australia</option>
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
+          <option value='under the sea'>Under the Sea</option>
+          <option value='under a rock'> Under a Rock</option>
+          <option value='in a box'>In a Box</option>
         </select>
 
         <label for="subject">Subject</label>
         <textarea
           id="subject"
           name="subject"
-          placeholder="Write something.."
+          placeholder="Write Something Here and We Will Get Back to You!"
           style="height:200px"
         ></textarea>
 
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Press The Button" />
       </form>
     </div>
     <footer>
