--- a/contactform.html
+++ b/contactform.html
@@ -54,9 +54,9 @@
           <option value="australia">Australia</option>
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
-          <option value='under the sea'>Under the Sea</option>
-          <option value='under a rock'> Under a Rock</option>
-          <option value='in a box'>In a Box</option>
+          <option value="under the sea">Under the Sea</option>
+          <option value="under a rock"> Under a Rock</option>
+          <option value="in a box">In a Box</option>
         </select>
 
         <label for="subject">Subject</label>
